        of column names. Thanks to Steve Lianoglou for highlighting.
        
    o   A new argument .SDcols has been added to [.data.table. This
        may be character column names or numeric positions, and
        specifies the columns of x included in .SD. This is useful
        for speed when applying a function through a subset of
        (possible very many) columns :
            DT[,lapply(.SD,sum),by="x,y",.SDcols=301:350]


BUG FIXES

    o   merge()ing two data.table's with user-defined `suffixes`
        was getting tripped up when column names in x ended in
        '.1'. This resulted in the `suffixes` parameter being
        ignored.
        
    o   Mistakenly wrapping a j expression inside quotes; e.g.,
            DT[,list("sum(a),sum(b)"),by=grp]
        was appearing to work, but with wrong column names. This
        now returns a character column (the quotes should not
        be used). Thanks to Joseph Voelkel for reporting. 
        
    
USER-VISIBLE CHANGES

    o   The startup banner checks to see if a new version
        is available and if there is, suggests upgrading.
        Suppressable with suppressPackageStartupMessages.
        
        
DEPRECATED & DEFUNCT

   o    Use of the DT() alias in j is no longer caught and
        replaced, and is now fully removed. As warned in NEWS
        for v1.5.3, v1.4, and FAQs 2.6 and 2.7.


        *********************************************
        **                                         **
        **   CHANGES IN DATA.TABLE VERSION 1.6.2   **
        **                                         **
        *********************************************

NEW FEATURES

   o    setkey no longer copies the whole table and should be
        faster for large tables. Each column is reordered by reference
        (in C) using one column of working memory, FR#1006. User
        defined attributes on the original table are now also
        retained (thanks to Thell Fowler for reporting).
        